--- a/1-analyses/germband-cauterizations/tortuosity.Rmd
+++ b/1-analyses/germband-cauterizations/tortuosity.Rmd
@@ -151,7 +151,7 @@ ggsave("4-plots/tortuosity_facet_smooth.svg", width = 18, height = 6)
 
 ## Plot tortuosity smooth btd
 
-```{r facet-smooth}
+```{r facet-smooth-btd}
 # Plot stocks separately using lines vertically
 ggplot(datasets[datasets$stock == "btd",], aes(minute, tortuosity, color = sample)) +
   geom_smooth(span = 0.3, show.legend = FALSE, aes(fill = sample)) +
@@ -174,7 +174,7 @@ ggsave("4-plots/tortuosity_facet_smooth_btd.svg", width = 12, height = 6)
 
 ## Plot tortuosity smooth eve
 
-```{r facet-smooth}
+```{r facet-smooth-eve}
 # Plot stocks separately using lines vertically
 ggplot(datasets[datasets$stock == "eve",], aes(minute, tortuosity, color = sample)) +
   geom_smooth(span = 0.3, show.legend = FALSE, aes(fill = sample)) +
