Revise Kb comparison and supplementary note

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -656,6 +656,24 @@
   language = {en}
 }
 
+@ARTICLE{Markow2009-xc,
+  title = {Egg size, embryonic development time and ovoviviparity in
+  {\textit{Drosophila}} species},
+  author = {Markow, T A and Beall, S and Matzkin, L M},
+  journaltitle = {J. Evol. Biol.},
+  publisher = {Wiley},
+  volume = {22},
+  issue = {2},
+  pages = {430--434},
+  date = {2009-02},
+  doi = {10.1111/j.1420-9101.2008.01649.x},
+  pmid = {19032497},
+  issn = {1010-061X,1420-9101},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1420-9101.2008.01649.x},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Vincent1997-fa,
   title = {Integration of the head and trunk segmentation systems controls
   cephalic furrow formation in \textit{{D}rosophila}},
@@ -1307,8 +1325,8 @@
 }
 
 @ARTICLE{Strobl2022-og,
-  title = {In toto light sheet fluorescence microscopy live imaging datasets of
-  \textit{{Ceratitis capitata}} embryonic development},
+  title = {\textit{In toto} light sheet fluorescence microscopy live imaging
+  datasets of {\textit{Ceratitis capitata}} embryonic development},
   author = {Strobl, Frederic and Schetelig, Marc F and Stelzer, Ernst H K},
   journaltitle = {Sci. Data},
   publisher = {Springer Science and Business Media LLC},
