Finish streamlining the discussion, finally

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1673,6 +1673,25 @@
   language = {en}
 }
 
+@ARTICLE{Newman2006-ns,
+  title = {Before programs: the physical origination of multicellular forms},
+  author = {Newman, Stuart A and Forgacs, Gabor and Muller, Gerd B},
+  journaltitle = {Int. J. Dev. Biol.},
+  publisher = {UPV/EHU Press},
+  volume = {50},
+  issue = {2-3},
+  pages = {289--299},
+  date = {2006},
+  doi = {10.1387/ijdb.052049sn},
+  pmid = {16479496},
+  issn = {0214-6282,1696-3547},
+  url = {http://dx.doi.org/10.1387/ijdb.052049sn},
+  keywords = {Animals; Cell Physiological Phenomena; Cells; Cells: cytology;
+  Epigenesis, Genetic; Epigenesis, Genetic: physiology;
+  Evolution;Mechano-evolution;Cephalic furrow mechanics;to be read},
+  language = {en}
+}
+
 @ARTICLE{Cadigan1994-hz,
   title = {Localized expression of \textit{sloppy paired} protein maintains the
   polarity of {\textit{D}}\textit{rosophila} parasegments},
