Add earlier theoretical work to discussion

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1692,6 +1692,23 @@
   language = {en}
 }
 
+@ARTICLE{Newman1994-sk,
+  title = {Generic physical mechanisms of tissue morphogenesis: A common basis
+  for development and evolution},
+  author = {Newman, Stuart A},
+  journaltitle = {J. Evol. Biol.},
+  publisher = {Wiley},
+  volume = {7},
+  issue = {4},
+  pages = {467--488},
+  date = {1994-07},
+  doi = {10.1046/j.1420-9101.1994.7040467.x},
+  issn = {1010-061X,1420-9101},
+  url = {http://dx.doi.org/10.1046/j.1420-9101.1994.7040467.x},
+  keywords = {Cephalic furrow mechanics},
+  language = {en}
+}
+
 @ARTICLE{Cadigan1994-hz,
   title = {Localized expression of \textit{sloppy paired} protein maintains the
   polarity of {\textit{D}}\textit{rosophila} parasegments},
