Add missing version numbers and software citation

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1634,6 +1634,19 @@
   language = {en}
 }
 
+@SOFTWARE{Saalfeld2008-ae,
+  type = {software},
+  title = {mpicbg: Fiji module for image transformation and related algorithms},
+  author = {Saalfeld, Stephan},
+  institution = {Github},
+  date = {2008},
+  url = {https://github.com/axtimwalde/mpicbg},
+  urldate = {2025-07-11},
+  keywords = {Cephalic furrow mechanics},
+  language = {en},
+  version = {v1.5.0}
+}
+
 @ARTICLE{Newman2000-oz,
   title = {Epigenetic mechanisms of character origination},
   author = {Newman, S A and Müller, G B},
