Add imaging data repositories to data availability

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1047,6 +1047,20 @@
   language = {en}
 }
 
+@DATASET{Vellutini2025-im,
+  title = {Laser perturbation imaging data: Patterned invagination prevents
+  mechanical instability during gastrulation},
+  author = {Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
+  Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák, Pavel},
+  booktitle = {Patterned invagination prevents mechanical instability during
+  gastrulation},
+  publisher = {Zenodo},
+  date = {2025-07-14},
+  doi = {10.5281/zenodo.15876646},
+  url = {https://zenodo.org/record/15876646},
+  keywords = {Supporting datasets;Cephalic furrow mechanics}
+}
+
 @ARTICLE{Nelson2016-gz,
   title = {On Buckling Morphogenesis},
   author = {Nelson, Celeste M},
@@ -1086,17 +1100,17 @@
   language = {en}
 }
 
-@DATASET{Vellutini2023-ng,
-  title = {Repository for: Patterned invagination prevents mechanical
-  instability during gastrulation},
+@DATASET{Vellutini2025-fs,
+  title = {Lightsheet and in situ imaging data for: Patterned invagination
+  prevents mechanical instability during gastrulation},
   author = {Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
   Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák, Pavel},
   booktitle = {Patterned invagination prevents mechanical instability during
   gastrulation},
   publisher = {Zenodo},
-  date = {2023-03-30},
-  doi = {10.5281/zenodo.7781947},
-  url = {https://zenodo.org/record/7781947},
+  date = {2025-07-14},
+  doi = {10.5281/zenodo.15876638},
+  url = {https://zenodo.org/record/15876638},
   keywords = {Supporting datasets;Cephalic furrow mechanics}
 }
 
@@ -1645,6 +1659,20 @@
   keywords = {Cephalic furrow mechanics},
   language = {en},
   version = {v1.5.0}
+}
+
+@DATASET{Vellutini2023-ng,
+  title = {Repository for: Patterned invagination prevents mechanical
+  instability during gastrulation},
+  author = {Vellutini, Bruno Cossermelli and Cuenca, Marina B and Krishna,
+  Abhijeet and Szałapak, Alicja and Modes, Carl D and Tomančák, Pavel},
+  booktitle = {Patterned invagination prevents mechanical instability during
+  gastrulation},
+  publisher = {Zenodo},
+  date = {2023-03-30},
+  doi = {10.5281/zenodo.7781947},
+  url = {https://zenodo.org/record/7781947},
+  keywords = {Supporting datasets;Cephalic furrow mechanics}
 }
 
 @ARTICLE{Newman2000-oz,
